@@ -1,4 +1,3 @@
-
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
@@ -7,7 +6,9 @@ import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+
 
 public class Geocoder {
 
@@ -15,43 +16,39 @@ public class Geocoder {
     private static double lnglng;
 
     private static final String GEOCODING_RESOURCE = "https://geocode.search.hereapi.com/v1/geocode";
-    private static final String API_KEY = "uY8aNon1m_rtZ6pGf_xI3bqOs-na97VWM0Y1rFUSI_M";
+    private static final String API_KEY = "KsnUri8CIPkGUdbmUqTKAwNZuG9im4N3dJ3wmcMvxgg";
 
-    public String GeocodeSync(String query) throws IOException, InterruptedException {
+    public static String GeocodeSync(String query) throws IOException, InterruptedException {
 
         HttpClient httpClient = HttpClient.newHttpClient();
 
-        String encodedQuery = URLEncoder.encode(query,"UTF-8");
+        String encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8);
         String requestUri = GEOCODING_RESOURCE + "?apiKey=" + API_KEY + "&q=" + encodedQuery;
 
         HttpRequest geocodingRequest = HttpRequest.newBuilder().GET().uri(URI.create(requestUri))
                 .timeout(Duration.ofMillis(2000)).build();
 
-        HttpResponse geocodingResponse = httpClient.send(geocodingRequest,
+        HttpResponse<String> geocodingResponse = httpClient.send(geocodingRequest,
                 HttpResponse.BodyHandlers.ofString());
 
-        return (String) geocodingResponse.body();
+        return geocodingResponse.body();
     }
 
     public static LatLong decode(String location) throws IOException, InterruptedException {
-        Geocoder test = new Geocoder();
+
         ObjectMapper mapper = new ObjectMapper();
 
-        String response = test.GeocodeSync(location);
 
-        JsonNode responseJsonNode = mapper.readTree(response);
+        JsonNode responseJsonNode = mapper.readTree(GeocodeSync(location));
         JsonNode items = responseJsonNode.get("items");
 
 
         for (JsonNode item : items) {
             JsonNode position = item.get("position");
 
-            String lat = position.get("lat").asText();
-            String lng = position.get("lng").asText();
-            latlat = Double.parseDouble(lat);
-            lnglng = Double.parseDouble(lng);
+            latlat = Double.parseDouble(position.get("lat").asText());
+            lnglng = Double.parseDouble(position.get("lng").asText());
         }
-
         return new LatLong(latlat,lnglng);
     }
 
